fix: api according to the modifications on the front-end
