# src/controllers/product.controller.ts
@@ -35,27 +35,25 @@ const createProduct = catchAsync(async (req, res) => {
 });
 
 const getProducts = catchAsync(async (req, res) => {
-  const admin = req.user as IUser;
   const { _page, _limit, category, brand, _sort, _order } = req.query;
+  const products = await productService.getProducts(
+    _page ? +_page : undefined,
+    _limit ? +_limit : undefined,
+    category as string,
+    brand as string,
+    _sort as string,
+    _order as string
+  );
+  res.status(httpStatus.OK).send(products);
+});
 
-  if (admin.role === 'admin') {
-    const products = await productService.getProductsAdmin();
-    res.status(httpStatus.OK).send(products);
-  } else {
-    const products = await productService.getProducts(
-      _page ? +_page : undefined,
-      _limit ? +_limit : undefined,
-      category as string,
-      brand as string,
-      _sort as string,
-      _order as string
-    );
-    res.status(httpStatus.OK).send(products);
-  }
+const getProductsAdmin = catchAsync(async (req, res) => {
+  const products = await productService.getProductsAdmin();
+  res.status(httpStatus.OK).send(products);
 });
 
 const getProduct = catchAsync(async (req, res) => {
-  const product = await productService.getProductById(+req.params.productId);
+  const product = await productService.getProductById(req.params.productId);
   if (!product) {
     throw new ApiError(httpStatus.NOT_FOUND, 'Product not found');
   }
@@ -70,6 +68,7 @@ const updateProduct = catchAsync(async (req, res) => {
     category,
     brand,
     images,
+    colors,
     price,
     discountPercentage,
     rating,
@@ -83,6 +82,7 @@ const updateProduct = catchAsync(async (req, res) => {
     category,
     brand,
     images,
+    colors,
     price,
     discountPercentage,
     rating,
@@ -94,7 +94,7 @@ const updateProduct = catchAsync(async (req, res) => {
 });
 
 const deleteProduct = catchAsync(async (req, res) => {
-  await productService.deleteProductById(+req.params.productId);
+  await productService.deleteProductById(req.params.productId);
   res.status(httpStatus.NO_CONTENT).send({ message: 'Product deleted' });
   logger.info(`Product ${req.params.productId} was deleted.`);
 });
@@ -110,19 +110,20 @@ const deactivateOrRestoreProduct = catchAsync(async (req, res) => {
 });
 
 const updateProductImages = catchAsync(async (req, res) => {
-  // const { image } = req.body;
-  // const existingProduct = await productService.getProductById(req.params.productId);
-  // if (!existingProduct) {
-  //   throw new ApiError(httpStatus.NOT_FOUND, 'Product not found');
-  // }
-  // const product = await productService.updateProductImage(+req.params.productId, image);
-  // res.send(product);
-  // logger.info(`Product ${product.id} image was updated.`);
+  const { images } = req.body;
+  const existingProduct = await productService.getProductById(req.params.productId);
+  if (!existingProduct) {
+    throw new ApiError(httpStatus.NOT_FOUND, 'Product not found');
+  }
+  const product = await productService.updateProductImages(req.params.productId, images);
+  res.send(product);
+  logger.info(`Product ${product._id} images were updated.`);
 });
 
 export default {
   createProduct,
   getProducts,
+  getProductsAdmin,
   getProduct,
   updateProduct,
   deleteProduct,
